[package]
name = "hyperbase-mqtt-sub-cli"
version = "0.1.2"
edition = "2021"

[dependencies]
hyperbase-mqtt-lib = { workspace = true }

tokio = { workspace = true }
clap = { workspace = true }
rumqttc = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
